--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,36 @@
-/* You can add global styles to this file, and also import other style files */
+@import '~@angular/material/theming';
+@import url('https://fonts.googleapis.com/css?family=Ubuntu+Mono&display=swap');
+
+@include mat-core();
+
+$resume-primary: mat-palette($mat-indigo);
+$resume-accent: mat-palette($mat-pink, A200, A100, A400);
+
+$resume-warn: mat-palette($mat-red);
+
+$resume-theme: mat-light-theme($resume-primary, $resume-accent, $resume-warn);
+
+@include angular-material-theme($resume-theme);
+
+html, body { height: 100%; }
+body {
+  margin: 0;
+  font-family: 'Ubuntu Mono', monospace;
+  background: var(--app-primary);
+}
+
+// Variables
+:root {
+  --app-primary: #212121;
+  --app-primary-light: #616161;
+
+  --app-secondary: #ffd740;
+  --app-secondary-light: #ffe57f;
+
+  --transparent: #00000000;
+}
+
+* {
+  font-family: 'Ubuntu Mono', monospace;
+}
+
