About Component added

--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -23,3 +23,13 @@
     }
   }
 }
+
+@media screen and (max-width: 900px) {
+  .header-toolbar {
+    padding: 54px 46px;
+  }
+
+  .toggle-group {
+    display: none;
+  }
+}
