Update with new design

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -1,44 +1,14 @@
 <div class="main-content">
   <div class="head"> 
-    <h2> About Me </h2>
-    <hr>
+    <div>
+      <label class="label"> About Me </label>
+      <hr class="divider">
+    </div>
   </div>
 
   <div class="content">
 
-    <div class="section">
-      <div class="text">
-        <label class="small"> From & living in </label>
-        <label class="big"> Chennai </label>
-      </div>
-      
-      <img src="../../../assets/chennai-central.png"/>
-    </div>
-
-    <hr>
-
-    <div class="section">
-      <div class="text">
-        <p class="small m-34"> This is a really long text where I'm going to define who I am, what I do, and what I am passionate about. And this text is going to be really really looong. </p>
-      </div>
-    </div>
-
-    <hr>
-
-    <div class="section">
-      <div class="text">
-        <label class="small"> My </label>
-        <label class="big"> Hobbies </label>
-      </div>
-      
-      <div class="hobbies">
-        <img src="../../../assets/table-tennis.svg"/>
-        <div>
-          <img src="../../../assets/cooking.svg"/>
-          <img src="../../../assets/paint.svg"/>
-        </div>
-      </div>
-    </div>
+    
 
   </div>
 
