--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -3,11 +3,20 @@
 
   <div class="content">
     <div class="greetings">
-      <label class="hello">Hello, </label>
-      <label class="name">I'm Firdous.</label>
-      <label class="what-am-i">Mobile & Web Developer & UI Designer</label>
+      <label class="hello">Hello, I'm</label>
+      <label class="name">
+        <div>
+          F<span class="white">i</span>rdous<span class="white">.</span>
+        </div>
+        <div class="name-info">
+          <span>
+            <span class="white">Yes</span>, just F<span class="white">i</span>rdous<span class="white">.</span>
+          </span>
+        </div>
+      </label>
+      <label class="what-am-i">Mobile & Web Developer, Team Player</label>
     </div>
 
-    <img src="../../../assets/myself.jpeg" />
+    <img src="../../../assets/myself.png" />
   </div>
 </div>
